--- a/edit.html
+++ b/edit.html
@@ -67,11 +67,11 @@
     </button>
     
     <div class="container mx-auto px-4 py-8 max-w-2xl">
-      <!-- Header Image -->
-      <div id="header-image" class="w-full mb-6 rounded-xl overflow-hidden shadow-lg">
-        <img src="https://i.imgur.com/EzmGunF.jpg" alt="Spring Festival" class="w-full h-auto" />
-      </div>
     <div id="app" class="space-y-6">
+      <!-- Header Image -->
+      <div id="header-image" class="w-full mb-6">
+        <img :src="headerSrc" alt="Spring Festival" class="w-full h-auto" />
+      </div>
       <!-- Edit Form Card -->
       <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 fade-in">
         <h2 class="text-2xl font-bold text-amber-800 dark:text-amber-200 mb-6">
