--- a/result.html
+++ b/result.html
@@ -47,7 +47,7 @@
     <!-- Theme Toggle Button -->
     <button 
       data-theme-toggle 
-      class="fixed bottom-6 right-6 z-50 w-14 h-14 rounded-full bg-white dark:bg-gray-800 shadow-lg hover:shadow-xl border-2 border-gray-200 dark:border-gray-700 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-red-500 hover:scale-110"
+      class="fixed bottom-6 right-6 z-50 w-14 h-14 rounded-full bg-white dark:bg-gray-800 shadow-lg hover:shadow-xl border-2 border-gray-200 dark:border-gray-700 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-green-500 hover:scale-110"
       aria-label="切換深色模式"
     >
       <!-- Sun Icon (深色模式時顯示) -->
@@ -86,14 +86,14 @@
 
       <!-- Thank You Message Card -->
       <div class="bg-white dark:bg-gray-800 rounded-xl shadow-lg p-6 fade-in" style="animation-delay: 0.1s;">
-        <pre class="text-amber-900 dark:text-amber-100 border-2 border-dashed border-amber-700 dark:border-amber-400 rounded-lg p-6 text-base whitespace-pre-wrap">{{thankyou}}</pre>
+        <pre class="text-emerald-900 dark:text-emerald-100 border-2 border-dashed border-emerald-700 dark:border-emerald-400 rounded-lg p-6 text-base whitespace-pre-wrap">{{thankyou}}</pre>
       </div>
 
       <!-- Return Button -->
       <div class="fade-in text-center" style="animation-delay: 0.2s;">
         <a 
           href="index.html" 
-          class="inline-block py-3 px-8 bg-gradient-to-r from-amber-700 to-yellow-600 hover:from-amber-800 hover:to-yellow-700 text-white font-bold rounded-lg shadow-lg hover:shadow-xl transition-all duration-200 transform hover:scale-105"
+          class="inline-block py-3 px-8 bg-gradient-to-r from-emerald-700 to-lime-600 hover:from-emerald-800 hover:to-lime-700 text-white font-bold rounded-lg shadow-lg hover:shadow-xl transition-all duration-200 transform hover:scale-105"
         >
           ← 返回首頁
         </a>
