style: update color of components and remove redundant color setting

--- a/result.html
+++ b/result.html
@@ -3,37 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="春節賀卡地址收集系統 - 送出成功" />
+    <meta name="description" content="黑西西🐻賀卡地址收集系統 - 送出成功" />
     <meta name="theme-color" content="#ef4444" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🧧</text></svg>" />
-    <title>送出成功 - 春節賀卡</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🌳</text></svg>" />
+    <title>送出成功 - 黑西西🐻賀卡</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              primary: '#92400e',
-              secondary: '#78350f',
-              accent: '#d97706',
-              earth: {
-                50: '#fefce8',
-                100: '#fef9c3',
-                200: '#fef08a',
-                300: '#fde047',
-                400: '#facc15',
-                500: '#eab308',
-                600: '#ca8a04',
-                700: '#a16207',
-                800: '#854d0e',
-                900: '#713f12',
-              }
-            }
-          }
-        }
       }
     </script>
     
