--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <button 
             @click="searchUser" 
             id="btn_search" 
-            :disabled="!userName"
+            :disabled="!userName || search_loading"
             class="w-full py-3 px-6 bg-emerald-700 hover:bg-emerald-800 disabled:bg-gray-300 disabled:cursor-not-allowed text-white font-semibold rounded-lg shadow-md hover:shadow-lg transition-all duration-200"
           >
             <span v-if="!search_loading">🔍 搜尋</span>
@@ -152,7 +152,7 @@
         <button 
           @click="gotoNext" 
           id="btn_confirm" 
-          :disabled="mdf === null"
+          :disabled="mdf === null || send_loading"
           class="w-full py-4 px-6 bg-gradient-to-r from-emerald-700 to-lime-600 hover:from-emerald-800 hover:to-lime-700 disabled:from-gray-300 disabled:to-gray-400 disabled:cursor-not-allowed text-white font-bold text-lg rounded-lg shadow-lg hover:shadow-xl transition-all duration-200 transform hover:scale-105"
         >
           <span v-if="!send_loading">下一步 →</span>
@@ -214,10 +214,14 @@
     <script src="./js/vue.js"></script>
 	<!-- Axios -->
     <script src="./js/axios.min.js"></script>
+	<!-- Mock Data (開發用) -->
+	<script src="./js/mock-data.js"></script>
 	<!-- API Manager -->
 	<script src="./js/api.js"></script>
 	<!-- Theme Manager -->
 	<script src="./js/theme.js"></script>
+	<!-- Dev Panel (開發用) -->
+	<script src="./js/dev-panel.js"></script>
 	<!-- Page Script -->
     <script src="./js/index.js"></script>
   </body>
