--- a/result.html
+++ b/result.html
@@ -100,10 +100,14 @@
     <script src="./js/vue.js"></script>
 	<!-- Axios -->
     <script src="./js/axios.min.js"></script>
+  <!-- Mock Data (開發用) -->
+	<script src="./js/mock-data.js"></script>
 	<!-- API Manager -->
 	<script src="./js/api.js"></script>
 	<!-- Theme Manager -->
 	<script src="./js/theme.js"></script>
+  <!-- Dev Panel (開發用) -->
+	<script src="./js/dev-panel.js"></script>
 	<!-- Page Script -->
     <script src="./js/result.js"></script>
   </body>
