--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="黑西西🐻賀卡地址收集系統 - 管理後台">
   <meta name="theme-color" content="#92400e">
+  
+  <!-- Open Graph Tags for Social Media Preview -->
+  <meta property="og:title" content="管理後台 - 黑西西🐻賀卡" />
+  <meta property="og:description" content="黑西西🐻賀卡地址收集系統 - 管理後台" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://ik.imagekit.io/ccblack/logo/logo.png" />
+  <meta property="og:url" content="" />
+  
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="管理後台 - 黑西西🐻賀卡" />
+  <meta name="twitter:description" content="管理後台" />
+  <meta name="twitter:image" content="https://ik.imagekit.io/ccblack/logo/logo.png" />
+  
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>⚙️</text></svg>" />
   <title>管理後台 - 黑西西🐻賀卡</title>
   
@@ -175,29 +189,39 @@
             <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
               <thead class="bg-gray-50 dark:bg-gray-800">
                 <tr>
-                  <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider">姓名</th>
-                  <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider">郵遞區號</th>
+                  <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-700" @click="sortAddresses('name')">
+                    姓名 {{ getSortIndicator('name') }}
+                  </th>
+                  <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-700" @click="sortAddresses('zone_id')">
+                    郵遞區號 {{ getSortIndicator('zone_id') }}
+                  </th>
                   <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider">地址</th>
-                  <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider">更新時間</th>
+                  <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider cursor-pointer hover:bg-gray-100 dark:hover:bg-gray-700" @click="sortAddresses('last_update')">
+                    更新時間 {{ getSortIndicator('last_update') }}
+                  </th>
                   <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider">操作</th>
                 </tr>
               </thead>
               <tbody class="bg-white dark:bg-gray-900 divide-y divide-gray-200 dark:divide-gray-700">
-                <tr v-for="addr in addresses" :key="addr.name">
+                <tr v-for="addr in sortedAddresses" :key="addr.name">
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-white">{{ addr.name }}</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">{{ addr.zone_id }}</td>
-                  <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-400">{{ addr.address }}</td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">{{ addr.timestamp }}</td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">{{ addr.zone_id || '-' }}</td>
+                  <td class="px-6 py-4 text-sm text-gray-500 dark:text-gray-400">{{ addr.address || '-' }}</td>
+                  <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">{{ addr.last_update || '-' }}</td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm">
                     <button @click="deleteAddress(addr.name)" class="text-red-600 hover:text-red-900 dark:text-red-400 dark:hover:text-red-300">
                       🗑️ 刪除
                     </button>
                   </td>
                 </tr>
-                <tr v-if="addresses.length === 0">
+                <tr v-if="sortedAddresses.length === 0">
                   <td colspan="5" class="px-6 py-8 text-center text-gray-500 dark:text-gray-400">
                     暫無資料
                   </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
                 </tr>
               </tbody>
             </table>
