--- a/edit.html
+++ b/edit.html
@@ -62,6 +62,7 @@
           <div class="p-4 bg-emerald-50 dark:bg-gray-700 rounded-lg">
             <label class="block text-sm font-medium text-gray-600 dark:text-gray-400 mb-1">姓名</label>
             <p class="text-lg font-semibold text-gray-800 dark:text-gray-200">{{userName}}</p>
+            <p v-if="errors.name" class="mt-2 text-sm text-red-600 dark:text-red-300">{{ errors.name }}</p>
           </div>
           
           <!-- Zip Code Input -->
@@ -91,6 +92,7 @@
                 ⚡ 自動查詢
               </button>
             </div>
+			<p v-if="errors.zone_id" class="mt-2 text-sm text-red-600 dark:text-red-300">{{ errors.zone_id }}</p>
             
             <!-- Zip Code Status Messages -->
             <div class="mt-2">
@@ -122,6 +124,7 @@
               placeholder="請輸入完整地址"
               class="w-full px-4 py-3 border-2 border-emerald-200 dark:border-emerald-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-emerald-500 dark:bg-gray-700 dark:text-white transition-all"
             />
+            <p v-if="errors.address" class="mt-2 text-sm text-red-600 dark:text-red-300">{{ errors.address }}</p>
           </div>
         </div>
       </div>
