--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               placeholder="請輸入姓名" 
               class="w-full px-4 py-3 border-2 border-emerald-200 dark:border-emerald-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-emerald-500 dark:bg-gray-700 dark:text-white transition-all"
             />
+            <p v-if="errors.name" class="mt-2 text-sm text-red-600 dark:text-red-300">{{ errors.name }}</p>
           </div>
           <button 
             @click="searchUser" 
